add feature button prev and btn next

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="sidebar-left">
         <div class="menu-icon logo" data-tooltip="Music Player">
-            <img src="./OIP.png" alt="Logo Musik">
+            <img src="/try.jpg" alt="Logo Musik">
         </div>
         <div class="menu-items">
             <div class="menu-icon active" data-tooltip="Home">
@@ -99,7 +99,7 @@
                 </button>
 
                 <div class="profile-pic-container" tabindex="0" aria-label="User Profile">
-                    <img src="https://via.placeholder.com/40" alt="Profile Picture" />
+                    <img src="/try.jpg" alt="Profile Picture" />
                 </div>
             </div>
         </nav>
@@ -211,7 +211,7 @@
             <div class="main-controls">
 
                 <!-- Tombol Previous -->
-                <button class="control-btn prev-btn" aria-label="Previous" >
+                <button class="control-btn prev-btn" id="prev-btn" aria-label="Previous" >
                     <svg viewBox="0 0 24 24">
                         <path d="M6 6h2v12H6zm3.5 6l8.5 6V6z" />
                     </svg>
@@ -230,7 +230,7 @@
                 </button>
 
                 <!-- Tombol Next -->
-                <button class="control-btn next-btn" aria-label="Next">
+                <button class="control-btn next-btn" id="next-btn" aria-label="Next">
                     <svg viewBox="0 0 24 24">
                         <path d="M16 18h2V6h-2v12zM6 18l8.5-6L6 6v12z" />
                     </svg>
