--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="menu-items">
             <div class="menu-icon active" data-tooltip="Home">
-                <i class="fas fa-home"></i>
+                <i class="fas fa-home" onclick="goTOHOME()"></i>
             </div>
             <div class="menu-icon" data-tooltip="Radio">
                 <i class="fas fa-broadcast-tower"></i>
@@ -43,7 +43,7 @@
                 <i class="fas fa-user-circle"></i>
             </div>
             <div class="menu-icon" data-tooltip="Favorites">
-                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart" onclick="getFavPage()"></i>
             </div>
             <div class="menu-icon" data-tooltip="Settings">
                 <i class="fas fa-cog"></i>
@@ -57,7 +57,6 @@
         <source src="">
     </Audio>
     <div id="iniMaincontainer">
-
         <nav class="top-nav">
             <div class="nav-left">
                 <div class="brand">
@@ -109,7 +108,7 @@
                 </div>
             </div>
         </nav>
-        <div class="containercontent">
+        <div class="containercontent" id="containercontent">
             <div id="contentAllJoinup">
                 <div id="contentAllJoin">
                     <div class="wrap">
@@ -192,9 +191,8 @@
     </div>
 
 
-    <div class="player-container">
+    <div class="player-container" id="player-container">
         <div class="controls-wrapper">
-
             <!-- ========== KONTROL UTAMA ========== -->
             <div class="main-controls">
 
@@ -303,12 +301,12 @@
                             d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z" />
                     </svg>
                 </button>
-
             </div>
         </div>
     </div>
 </body>
 <script src="./components.js"></script>
+<script src="./auth.js"></script>
 <script src="TR_PTI_Navbar_Bottom.js"></script>
 
 </html>
