--- a/SPindex.html
+++ b/SPindex.html
@@ -169,5 +169,7 @@
       </section>
     </section>
   </main>
+  <!-- Link ke JavaScript -->
+  <script src="SPscript.js"></script>
 </body>
 </html>
