add search page

--- a/main/Index.html
+++ b/main/Index.html
@@ -18,12 +18,8 @@
 </head>
 
 <body>
-    <div class="music-search" id="musicSearch-dialog">
-        <div class="music-search-inter" id="music-container-search">
-            <p style="margin-bottom: 5px; color: white;">Music List</p>
-
-        </div>
-        <button id="exit">exit</button>
+    <div id="searchPage">
+        <iframe id="iframesarch" src="./search/SPindex.html" frameborder="0"></iframe>
     </div>
     <div class="sidebar-left">
         <div class="menu-icon logo" data-tooltip="Music Player">
