--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Music Player - Profile</title>
     <script src ="profile_page.js" defer></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="profile_page.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Sidebar -->
