--- a/playlistpage/favpage.html
+++ b/playlistpage/favpage.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!-- START SALIN: Struktur elemen halaman favorit -->
+    <!--: Struktur elemen halaman favorit -->
     <div class="playlist-container">
         <header class="playlist-header">
             <div class="album-art">
@@ -108,5 +108,6 @@
     <script src="../main/auth.js"></script>
     <script src="../main/components.js"></script>
 </body>
+
 
 </html>
