--- a/playlistpage/favpage.html
+++ b/playlistpage/favpage.html
@@ -102,7 +102,7 @@
     </div>
 
 
-    <!-- END SALIN: Struktur elemen halaman favorit -->
+    <!--: Struktur elemen halaman favorit -->
 
     <script src="favpage.js"></script>
     <script src="../main/auth.js"></script>
@@ -111,3 +111,4 @@
 
 
 </html>
+
